# sinpp

./: .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml  tsconfig.json
schedule/: admin.py  forms.py  models.py  parse_schedule_csv.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_availabilityblock_event_role_event_role_visibility_and_more.py  0003_remove_speedrun_volunteers_commentating_and_more.py  0004_alter_person_roles_remove_shift_volunteer_and_more.py  0005_event_time_safety_margin.py  0006_shift_speedruns.py  0007_intermission.py  0008_alter_speedrun_category_alter_speedrun_game.py  0009_remove_event_time_safety_margin_and_more.py  0010_remove_role_hour_based_role_type.py  0011_room_speedrun_room.py  0012_role_volunteers.py  0013_remove_role_volunteers.py  0014_intermission_room_shift_room.py  0015_alter_role_visibility.py  0016_event_staff.py  0017_alter_room_speedruns.py  0018_alter_event_short_title.py  0019_room_slug_alter_event_short_title.py  0020_alter_room_slug.py  0021_remove_room_speedruns.py  0022_alter_speedrun_volunteers_engaged.py  0023_alter_speedrun_volunteers_engaged.py  0024_rename_short_title_event_slug_and_more.py  0025_remove_intermission_volunteer_shifts_and_more.py  0026_alter_room_slug.py  0027_rename_volunteer_shift_volunteers.py  0028_remove_role_type_remove_role_visibility.py  0029_remove_shift_speedruns_alter_speedrun_game.py
schedule/tests/: test_availability_block.py  (+8 more)
sinpp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+22 files in other folders)
