[tool.poetry]
name = "sinpp"
version = "pre-release"
description = "Schedule-i-nator++"
authors = ["PokerFacowaty <pokerfacowaty.bn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
