[tool.poetry]
name = "sinpp"
version = "v0.1.0"
description = "Schedule-i-nator++"
authors = ["PokerFacowaty <pokerfacowaty.bn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
