[tool.poetry]
name = "sinpp"
version = "v0.1.0"
description = "Schedule-i-nator++"
authors = ["PokerFacowaty <pokerfacowaty.bn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
python-dotenv = "^1.0.0"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
